--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
-    "graphql": "^15.0.0",
     "react": "^16.12.0",
+    "graphql": "14.6.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
+    "react-scripts": "3.4.0",
     "typescript": "^3.8.3"
   },
   "scripts": {
@@ -37,6 +37,8 @@
     ]
   },
   "devDependencies": {
+    "@apollo/react-components": "^3.1.4",
+    "@apollo/react-hoc": "^3.1.4",
     "@graphql-codegen/cli": "^1.13.2",
     "@graphql-codegen/fragment-matcher": "1.13.2",
     "@graphql-codegen/introspection": "1.13.2",
