--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,5 +19,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules/"]
 }
