--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
-    "react": "^16.12.0",
     "graphql": "14.6.0",
+    "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "^3.8.3"
   },
@@ -45,6 +46,7 @@
     "@graphql-codegen/typescript": "1.13.2",
     "@graphql-codegen/typescript-operations": "1.13.2",
     "@graphql-codegen/typescript-react-apollo": "1.13.2",
+    "@types/react-router-dom": "^5.1.4",
     "styled-components": "^5.1.0"
   }
 }
