--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-link-http": "^1.5.17",
     "graphql": "14.6.0",
     "js-cookie": "^2.2.1",
+    "material-table": "^1.57.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -22,7 +23,7 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "yarn codegen && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
