--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -2,10 +2,14 @@ on:
   push:
 
 jobs:
-  tsc:
-    name: tsc
+  codecov:
+    name: codecov
     runs-on: ubuntu-latest
     steps:
-      - name: Codecov
-      uses: codecov/codecov-action@v1.0.7
+      - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
+      with:
+        file: ./coverage.xml
+        name: codecov-umbrella
+        fail_ci_if_error: true
     
