--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,13 +1,14 @@
+name: Codecov
 on:
   push:
 
 jobs:
-  codecov:
+  run:
     name: codecov
     runs-on: ubuntu-latest
     steps:
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v1.0.7
         with:
           file: ./coverage.xml
           name: codecov-umbrella
